add google ad sense

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,5 +43,15 @@
         }, false);
       })(document);
     </script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- Initial -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-3714113758123770"
+           data-ad-slot="9551166642"
+           data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
   </body>
 </html>
